tests/errors/test_17.xpp
// Variatic type may only be last specified type in extern declaration

extern bar(..., i8) void;

fn main() void {}